src/objects/Test_CustomMetadta__mdt.object
<CustomObject>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_1__c</fullName>
        <label>Record Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_2__c</fullName>
        <label>Record Type 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test CustomMetadta</label>
    <pluralLabel>Test CustomMetadta</pluralLabel>
</CustomObject>